--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -172,14 +172,15 @@ section.contact .social-media a {
 </style>
 <style>
 .timer-container {
-            font-size: 10px;
+            font-size: 15px;
             padding: 15px;
             background-color: rgba(255,255,0,0.3);
             border-radius: 10px;
             display: inline-block;
+            color:red;
         }
         .timer {
-            font-size: 10px;
+            font-size: 15px;
             padding: 5px;
             border-radius: 5px;
             display: inline-block;
@@ -222,7 +223,7 @@ section.contact .social-media a {
         <p>We invite students to contribute articles in the <b>AI-ML and programming domains (including interdisciplinary topics such as AI in Physics, Robotics and more) for our annual newsletter</b>. We are looking for fresh insights, any findings, and thoughtful analyses that engage our community.
         </p>
          <a href="https://wayanadonline.unaux.com/submit.php" target="_blank"><button class="btn btn-outline-dark btn-lg">Make Submission <i class="bi bi-rocket-takeoff-fill"></i></button></a>
-        <br><div class="timer-container">
+        <br><br><div class="timer-container">
         <div id="countdown">Submission closes in <span id="timer">Loading...</span></div>
     </div>
       </div>
@@ -242,7 +243,7 @@ section.contact .social-media a {
           <i class="bi bi-alexa"></i>
           <div class="card-body">
             <h5 class="card-title fw-bold">AI</h5>
-            <p class="card-text">AI, ML, NLP, DL, CV, GenAI, Cyber security, Data Science, Statistics</p>
+            <p class="card-text">AI, ML, NLP, DL,<br>CV, GenAI, Cyber security,<br> Data Science, Statistics</p>
           </div>
         </div>
       </div>
@@ -251,7 +252,7 @@ section.contact .social-media a {
           <i class="bi bi-code-square"></i>
           <div class="card-body">
             <h5 class="card-title fw-bold">Programming</h5>
-            <p class="card-text">Programming Languages, Data Analysis, etc.</p>
+            <p class="card-text">Programming Languages,<br> Data Analysis,<br>DSA etc.</p>
           </div>
         </div>
       </div>
