--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -224,7 +224,7 @@ section.contact .social-media a {
         </p>
          <a href="https://wayanadonline.unaux.com/submit.php" target="_blank"><button class="btn btn-outline-dark btn-lg">Make Submission <i class="bi bi-rocket-takeoff-fill"></i></button></a>
         <br><br><div class="timer-container">
-        <div id="countdown">Submission closes in <span id="timer">Loading...</span></div>
+        <div id="countdown">Submission closes in <b><span id="timer">Loading...</span></b></div>
     </div>
       </div>
       <div class="col-sm-6 text-center">
@@ -261,7 +261,7 @@ section.contact .social-media a {
           <i class="bi bi-robot"></i>
           <div class="card-body">
             <h5 class="card-title fw-bold">Interdisciplinary</h5>
-            <p class="card-text">Applications of AI in Physics, Quantum Computing, Robotics, Biology, Business, Healthcare etc.</p>
+            <p class="card-text">Applications of AI in Eco, Physics, Quantum Computing, Robotics, Bio, Business, Finance, Healthcare etc.</p>
           </div>
         </div>
       </div>
@@ -346,7 +346,7 @@ section.contact .social-media a {
             const minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
             const seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
 
-            const timerDisplay = `${days}d ${padZero(hours)}h:${padZero(minutes)}m:${padZero(seconds)}s`;
+            const timerDisplay = `${days}d:${padZero(hours)}h:${padZero(minutes)}m:${padZero(seconds)}s`;
 
             const timerElement = document.getElementById('timer');
             timerElement.innerHTML = timerDisplay;
