--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -201,7 +201,7 @@ section.contact .social-media a {
           <a class="nav-link active" aria-current="page" href="#hero">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#services">Domains</a>
+          <a class="nav-link" href="#services">Themes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#about">Rules</a>
@@ -236,14 +236,16 @@ section.contact .social-media a {
 
 <section class="services" id="services">
   <div class="container">
-    <h2 class="display-5 fw-bold mb-4">Topics</h2>
+    <h2 class="display-5 fw-bold mb-4">Domains</h2>
     <div class="row">
       <div class="col-lg col-sm-6 mt-4">
         <div class="card">
           <i class="bi bi-alexa"></i>
           <div class="card-body">
             <h5 class="card-title fw-bold">AI</h5>
-            <p class="card-text">AI, ML, NLP, DL,<br>CV, GenAI, Cyber security,<br> Data Science, Statistics</p>
+            <p class="card-text"><a href="https://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank">AI</a>, <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank">ML</a>, <a href="https://en.wikipedia.org/wiki/Natural_language_processing" target="_blank">NLP</a>, 
+              <a href="https://en.wikipedia.org/wiki/Deep_learning" target="_blank">DL</a>,<br><a href="https://en.wikipedia.org/wiki/Computer_vision" target="_blank">CV</a>, <a href="https://en.wikipedia.org/wiki/Generative_artificial_intelligence" target="_blank">GenAI</a>, 
+              <a href="https://en.wikipedia.org/wiki/Internet_of_things" target="_blank">Cyber security</a>,<br> <a href="https://en.wikipedia.org/wiki/Data_science" target="_blank">Data Science</a>, <a href="https://en.wikipedia.org/wiki/Statistics" target="_blank">Statistics</a></p>
           </div>
         </div>
       </div>
@@ -252,7 +254,7 @@ section.contact .social-media a {
           <i class="bi bi-code-square"></i>
           <div class="card-body">
             <h5 class="card-title fw-bold">Programming</h5>
-            <p class="card-text">Programming Languages,<br> Data Analysis,<br>DSA etc.</p>
+            <p class="card-text"><a href="https://en.wikipedia.org/wiki/Programming_language" target="_blank">Programming Languages</a>,<br> <a href="https://en.wikipedia.org/wiki/Data_mining" target="_blank">Data mining</a>,<br><a href="https://en.wikipedia.org/wiki/Algorithm" target="_blank">Algorithms</a> etc.</p>
           </div>
         </div>
       </div>
@@ -261,7 +263,10 @@ section.contact .social-media a {
           <i class="bi bi-robot"></i>
           <div class="card-body">
             <h5 class="card-title fw-bold">Interdisciplinary</h5>
-            <p class="card-text">Applications of AI in Eco, Physics, Quantum Computing, Robotics, Bio, Business, Finance, Healthcare etc.</p>
+            <p class="card-text">Applications of <a href="https://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank">AI</a> in <a href="https://en.wikipedia.org/wiki/Economics" target="_blank">Eco</a>, <a href="https://en.wikipedia.org/wiki/Physics" target="_blank">Physics</a>, 
+              <a href="https://en.wikipedia.org/wiki/Quantum_computing" target="_blank">Quantum Computing</a>, <a href="https://en.wikipedia.org/wiki/Robotics" target="_blank">Robotics</a>, 
+              <a href="https://en.wikipedia.org/wiki/Biology" target="_blank">Bio</a>, <a href="https://en.wikipedia.org/wiki/Finance" target="_blank">Business & Finance</a>, 
+              <a href="https://en.wikipedia.org/wiki/Artificial_intelligence_in_healthcare" target="_blank">Healthcare</a> etc.</p>
           </div>
         </div>
       </div>
