--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -198,7 +198,7 @@ section.contact .social-media a {
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mx-auto">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#hero">Home</a>
+          <a class="nav-link active" aria-current="page" href="/ml/">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#services">Themes</a>
@@ -210,7 +210,8 @@ section.contact .social-media a {
           <a class="nav-link" href="steps-article-contest.pdf">Guide</a>
         </li>
       </ul>
-      <a href="https://wayanadonline.unaux.com/submit.php" target="_blank" class="btn btn-outline-dark d-none d-lg-block" href="">Upload <i class="bi bi-link-45deg"></i></a>
+      <a href="https://wayanadonline.unaux.com/submit.php" target="_blank" class="btn btn-outline-dark d-none d-lg-block">Upload <i class="bi bi-link-45deg"></i></a>
+      <a href="https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe" target="_blank" class="btn btn-outline-dark d-none d-lg-block"><i class="bi bi-whatsapp"></i></a>
     </div>
   </div>
 </nav>
@@ -292,8 +293,8 @@ section.contact .social-media a {
 6. It should be crisp, try to align with this page limit - max. number of pages can be 3. Cite references wherever applicable.</br>
 7. Acceptance to showcase a blog on our site depends on the initiative core team and whatever decided is final. No queries to be entertained about this.<br>
 8. If the submitted article is approved from our end, the same cannot be posted/shared in other platforms.
-<br>
-                <font color="blue">Shortlisted articles will be featured in our newsletter, making it a special highlight! We look forward to the exceptional quality of your submissions.</font>
+<br><br>
+                <font color="blue"><b>Shortlisted articles will be featured in our newsletter, making it a special highlight! Participation certificate will be provided by the house for each submission.</b></font>
               </p>
               <p style="text-align: justify;"><b>We express our sincere gratitude to Mr. Piyush Wairale, course instructor IITM BS for his support and guidance.</b></p>
   </div>
