--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -211,7 +211,7 @@ section.contact .social-media a {
         </li>
       </ul>
       <a href="https://wayanadonline.unaux.com/submit.php" target="_blank" class="btn btn-outline-dark d-none d-lg-block">Upload <i class="bi bi-link-45deg"></i></a>
-      <a href="https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe" target="_blank" class="btn btn-outline-dark d-none d-lg-block"><i class="bi bi-whatsapp"></i></a>
+      &nbsp;&nbsp;<a href="https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe" target="_blank" class="btn btn-outline-dark d-none d-lg-block"><i class="bi bi-whatsapp"></i></a>
     </div>
   </div>
 </nav>
@@ -294,7 +294,7 @@ section.contact .social-media a {
 7. Acceptance to showcase a blog on our site depends on the initiative core team and whatever decided is final. No queries to be entertained about this.<br>
 8. If the submitted article is approved from our end, the same cannot be posted/shared in other platforms.
 <br><br>
-                <font color="blue"><b>Shortlisted articles will be featured in our newsletter, making it a special highlight! Participation certificate will be provided by the house for each submission.</b></font>
+                <font color="blue"><b><i class="bi bi-check-circle-fill"></i> Shortlisted articles will be featured in our newsletter, making it a special highlight! Participation certificate will be provided by the house for each submission.</b></font>
               </p>
               <p style="text-align: justify;"><b>We express our sincere gratitude to Mr. Piyush Wairale, course instructor IITM BS for his support and guidance.</b></p>
   </div>
