--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -255,7 +255,7 @@ section.contact .social-media a {
           <i class="bi bi-code-square"></i>
           <div class="card-body">
             <h5 class="card-title fw-bold">Programming</h5>
-            <p class="card-text"><a href="https://en.wikipedia.org/wiki/Programming_language" target="_blank">Programming Languages</a>,<br> <a href="https://en.wikipedia.org/wiki/Data_mining" target="_blank">Data mining</a>,<br><a href="https://en.wikipedia.org/wiki/Algorithm" target="_blank">Algorithms</a> etc.</p>
+            <p class="card-text">Computer Systems (<a href="https://en.wikipedia.org/wiki/Programming_language" target="_blank">Programming Languages</a>, <a href="https://en.wikipedia.org/wiki/Data_mining" target="_blank">Software engineering</a>, <a href="https://en.wikipedia.org/wiki/Compiler" target="_blank">compilers</a>, <a href="https://en.wikipedia.org/wiki/Database" target="_blank">databases</a>, <a href="https://en.wikipedia.org/wiki/Algorithm" target="_blank">systems software</a>, <a href="https://en.wikipedia.org/wiki/Hardware_security" target="_blank">hardware and security</a>), TCS (<a href="https://en.wikipedia.org/wiki/Algorithm" target="_blank">Algorithms</a>, <a href="https://www.wikiwand.com/en/articles/Computational_complexity" target="_blank">Complexity</a>, <a href="https://en.wikipedia.org/wiki/Cryptography" target="_blank">Cryptography</a>)</p>
           </div>
         </div>
       </div>
