--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -243,9 +243,9 @@ section.contact .social-media a {
         <div class="card">
           <i class="bi bi-alexa"></i>
           <div class="card-body">
-            <h5 class="card-title fw-bold">AI</h5>
-            <p class="card-text"><a href="https://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank">AI</a>, <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank">ML</a>, <a href="https://en.wikipedia.org/wiki/Natural_language_processing" target="_blank">NLP</a>, 
-              <a href="https://en.wikipedia.org/wiki/Deep_learning" target="_blank">DL</a>,<br><a href="https://en.wikipedia.org/wiki/Computer_vision" target="_blank">CV</a>, <a href="https://en.wikipedia.org/wiki/Generative_artificial_intelligence" target="_blank">GenAI</a>, 
+            <h5 class="card-title fw-bold">AI-ML</h5>
+            <p class="card-text"><a href="https://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank">AI</a>, <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank">ML</a>, <a href="https://en.wikipedia.org/wiki/Natural_language_processing" target="_blank">Natural Language Processing</a>, 
+              <a href="https://en.wikipedia.org/wiki/Deep_learning" target="_blank">Deep Learning</a>,<br><a href="https://en.wikipedia.org/wiki/Computer_vision" target="_blank">Computer Vision</a>, <a href="https://en.wikipedia.org/wiki/Generative_artificial_intelligence" target="_blank">GenAI</a>, 
               <a href="https://en.wikipedia.org/wiki/Internet_of_things" target="_blank">Cyber security</a>,<br> <a href="https://en.wikipedia.org/wiki/Data_science" target="_blank">Data Science</a>, <a href="https://en.wikipedia.org/wiki/Statistics" target="_blank">Statistics</a></p>
           </div>
         </div>
@@ -254,8 +254,8 @@ section.contact .social-media a {
         <div class="card">
           <i class="bi bi-code-square"></i>
           <div class="card-body">
-            <h5 class="card-title fw-bold">Programming</h5>
-            <p class="card-text">Computer Systems (<a href="https://en.wikipedia.org/wiki/Programming_language" target="_blank">Programming Languages</a>, <a href="https://en.wikipedia.org/wiki/Data_mining" target="_blank">Software engineering</a>, <a href="https://en.wikipedia.org/wiki/Compiler" target="_blank">compilers</a>, <a href="https://en.wikipedia.org/wiki/Database" target="_blank">databases</a>, <a href="https://en.wikipedia.org/wiki/Algorithm" target="_blank">systems software</a>, <a href="https://en.wikipedia.org/wiki/Hardware_security" target="_blank">hardware and security</a>), TCS (<a href="https://en.wikipedia.org/wiki/Algorithm" target="_blank">Algorithms</a>, <a href="https://www.wikiwand.com/en/articles/Computational_complexity" target="_blank">Complexity</a>, <a href="https://en.wikipedia.org/wiki/Cryptography" target="_blank">Cryptography</a>)</p>
+            <h5 class="card-title fw-bold">CS</h5>
+            <p class="card-text">Computer Systems (<a href="https://en.wikipedia.org/wiki/Programming_language" target="_blank">Programming Languages</a>, <a href="https://en.wikipedia.org/wiki/Software_engineering" target="_blank">Software engg</a>, <a href="https://en.wikipedia.org/wiki/Compiler" target="_blank">compilers</a>, <a href="https://en.wikipedia.org/wiki/Database" target="_blank">databases</a>, <a href="https://en.wikipedia.org/wiki/System_software" target="_blank">software</a>, <a href="https://en.wikipedia.org/wiki/Hardware_security" target="_blank">hardware and security</a>), TCS (<a href="https://en.wikipedia.org/wiki/Algorithm" target="_blank">Algorithms</a>, <a href="https://www.wikiwand.com/en/articles/Computational_complexity" target="_blank">Complexity</a>, <a href="https://en.wikipedia.org/wiki/Cryptography" target="_blank">Cryptography</a>)</p>
           </div>
         </div>
       </div>
@@ -264,9 +264,9 @@ section.contact .social-media a {
           <i class="bi bi-robot"></i>
           <div class="card-body">
             <h5 class="card-title fw-bold">Interdisciplinary</h5>
-            <p class="card-text">Applications of <a href="https://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank">AI</a> in <a href="https://en.wikipedia.org/wiki/Economics" target="_blank">Eco</a>, <a href="https://en.wikipedia.org/wiki/Physics" target="_blank">Physics</a>, 
+            <p class="card-text">Applications of <a href="https://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank">AI</a> in <a href="https://en.wikipedia.org/wiki/Economics" target="_blank">Economics</a>, <a href="https://en.wikipedia.org/wiki/Physics" target="_blank">Physics</a>, 
               <a href="https://en.wikipedia.org/wiki/Quantum_computing" target="_blank">Quantum Computing</a>, <a href="https://en.wikipedia.org/wiki/Robotics" target="_blank">Robotics</a>, 
-              <a href="https://en.wikipedia.org/wiki/Biology" target="_blank">Bio</a>, <a href="https://en.wikipedia.org/wiki/Finance" target="_blank">Business & Finance</a>, 
+              <a href="https://en.wikipedia.org/wiki/Biology" target="_blank">Biomed</a>, <a href="https://en.wikipedia.org/wiki/Finance" target="_blank">Business and Finance</a>, 
               <a href="https://en.wikipedia.org/wiki/Artificial_intelligence_in_healthcare" target="_blank">Healthcare</a> etc.</p>
           </div>
         </div>
