--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -245,7 +245,7 @@ section.contact .social-media a {
           <div class="card-body">
             <h5 class="card-title fw-bold">AI-ML</h5>
             <p class="card-text"><a href="https://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank">AI</a>, <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank">ML</a>, <a href="https://en.wikipedia.org/wiki/Natural_language_processing" target="_blank">Natural Language Processing</a>, 
-              <a href="https://en.wikipedia.org/wiki/Deep_learning" target="_blank">Deep Learning</a>,<br><a href="https://en.wikipedia.org/wiki/Computer_vision" target="_blank">Computer Vision</a>, <a href="https://en.wikipedia.org/wiki/Generative_artificial_intelligence" target="_blank">GenAI</a>, 
+              <a href="https://en.wikipedia.org/wiki/Deep_learning" target="_blank">Deep Learning</a>, <a href="https://en.wikipedia.org/wiki/Computer_vision" target="_blank">Computer Vision</a>, <a href="https://en.wikipedia.org/wiki/Generative_artificial_intelligence" target="_blank">GenAI</a>, 
               <a href="https://en.wikipedia.org/wiki/Internet_of_things" target="_blank">Cyber security</a>,<br> <a href="https://en.wikipedia.org/wiki/Data_science" target="_blank">Data Science</a>, <a href="https://en.wikipedia.org/wiki/Statistics" target="_blank">Statistics</a></p>
           </div>
         </div>
