--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -246,7 +246,7 @@ section.contact .social-media a {
             <h5 class="card-title fw-bold">AI-ML</h5>
             <p class="card-text"><a href="https://en.wikipedia.org/wiki/Artificial_intelligence" target="_blank">AI</a>, <a href="https://en.wikipedia.org/wiki/Machine_learning" target="_blank">ML</a>, <a href="https://en.wikipedia.org/wiki/Natural_language_processing" target="_blank">Natural Language Processing</a>, 
               <a href="https://en.wikipedia.org/wiki/Deep_learning" target="_blank">Deep Learning</a>, <a href="https://en.wikipedia.org/wiki/Computer_vision" target="_blank">Computer Vision</a>, <a href="https://en.wikipedia.org/wiki/Generative_artificial_intelligence" target="_blank">GenAI</a>, 
-              <a href="https://en.wikipedia.org/wiki/Internet_of_things" target="_blank">Cyber security</a>,<br> <a href="https://en.wikipedia.org/wiki/Data_science" target="_blank">Data Science</a>, <a href="https://en.wikipedia.org/wiki/Statistics" target="_blank">Statistics</a></p>
+              <a href="https://en.wikipedia.org/wiki/Internet_of_things" target="_blank">Cyber security</a>, <a href="https://en.wikipedia.org/wiki/Data_science" target="_blank">Data Science</a>, <a href="https://en.wikipedia.org/wiki/Statistics" target="_blank">Stats</a></p>
           </div>
         </div>
       </div>
@@ -254,8 +254,8 @@ section.contact .social-media a {
         <div class="card">
           <i class="bi bi-code-square"></i>
           <div class="card-body">
-            <h5 class="card-title fw-bold">CS</h5>
-            <p class="card-text">Computer Systems (<a href="https://en.wikipedia.org/wiki/Programming_language" target="_blank">Programming Languages</a>, <a href="https://en.wikipedia.org/wiki/Software_engineering" target="_blank">Software engg</a>, <a href="https://en.wikipedia.org/wiki/Compiler" target="_blank">compilers</a>, <a href="https://en.wikipedia.org/wiki/Database" target="_blank">databases</a>, <a href="https://en.wikipedia.org/wiki/System_software" target="_blank">software</a>, <a href="https://en.wikipedia.org/wiki/Hardware_security" target="_blank">hardware and security</a>), TCS (<a href="https://en.wikipedia.org/wiki/Algorithm" target="_blank">Algorithms</a>, <a href="https://www.wikiwand.com/en/articles/Computational_complexity" target="_blank">Complexity</a>, <a href="https://en.wikipedia.org/wiki/Cryptography" target="_blank">Cryptography</a>)</p>
+            <h5 class="card-title fw-bold">CS-TCS</h5>
+            <p class="card-text"><a href="https://en.wikipedia.org/wiki/Programming_language" target="_blank">Programming Languages</a>, <a href="https://en.wikipedia.org/wiki/Software_engineering" target="_blank">Software engg</a>, <a href="https://en.wikipedia.org/wiki/Compiler" target="_blank">compilers</a>, <a href="https://en.wikipedia.org/wiki/Database" target="_blank">databases</a>, <a href="https://en.wikipedia.org/wiki/System_software" target="_blank">software</a>, <a href="https://en.wikipedia.org/wiki/Hardware_security" target="_blank">hardware and security</a>, <a href="https://en.wikipedia.org/wiki/Algorithm" target="_blank">Algorithms</a>, <a href="https://www.wikiwand.com/en/articles/Computational_complexity" target="_blank">Complexity</a>, <a href="https://en.wikipedia.org/wiki/Cryptography" target="_blank">Cryptography</a></p>
           </div>
         </div>
       </div>
