--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -210,8 +210,8 @@ section.contact .social-media a {
           <a class="nav-link" href="steps-article-contest.pdf">Guide</a>
         </li>
       </ul>
-      <a href="https://wayanadonline.unaux.com/submit.php" target="_blank" class="btn btn-outline-dark d-none d-lg-block">Upload <i class="bi bi-link-45deg"></i></a>
-      &nbsp;&nbsp;<a href="https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe" target="_blank" class="btn btn-outline-dark d-none d-lg-block"><i class="bi bi-whatsapp"></i></a>
+      <!--<a href="" target="_blank" class="btn btn-outline-dark d-none d-lg-block">Upload <i class="bi bi-link-45deg"></i></a>
+      &nbsp;&nbsp;--><a href="https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe" target="_blank" class="btn btn-outline-dark d-none d-lg-block"><i class="bi bi-whatsapp"></i></a>
     </div>
   </div>
 </nav>
@@ -223,9 +223,9 @@ section.contact .social-media a {
         <h1 class="display-2 fw-bold">Article Contest</h1>
         <p>We invite students to contribute articles in the <b>AI-ML and programming domains (including interdisciplinary topics such as AI in Physics, Robotics and more) for our annual newsletter</b>. We are looking for fresh insights, any findings, and thoughtful analyses that engage our community.
         </p>
-         <a href="https://wayanadonline.unaux.com/submit.php" target="_blank"><button class="btn btn-outline-dark btn-lg">Make Submission <i class="bi bi-rocket-takeoff-fill"></i></button></a>
+         <a href="#" target="_blank"><button class="btn btn-outline-dark btn-lg">Make Submission <i class="bi bi-rocket-takeoff-fill"></i></button></a>
         <br><br><div class="timer-container">
-        <div id="countdown">Submission closes in <b><span id="timer">Loading...</span></b></div>
+        <div id="countdown"><!--Submission closes in --><b><span id="timer">Loading...</span></b></div>
     </div>
       </div>
       <div class="col-sm-6 text-center">
