--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>ML Series - Wayanad House</title>
-<meta name="title" content="ML Series - Wayanad House">
-<meta name="description" content="Welcome to Wayanad House">
+<title>WHALE 🐋 Initiative</title>
+<meta name="title" content="WHALE 🐋 Initiative">
+<meta name="description" content="Welcome to Wayanad House AI-ML Enthusiasts Interest Group">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://wayanadiitm.github.io/ml/">
 <meta property="og:title" content="ML Series - Wayanad House">
-<meta property="og:description" content="ML Series is an initiative by the Wayanad House">
+<meta property="og:description" content="Welcome to Wayanad House AI-ML Enthusiasts Interest Group">
 <meta property="og:image" content="https://wayanadiitm.github.io/ml/assets/images/favicon.png">
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://wayanadiitm.github.io/ml/">
 <meta property="twitter:title" content="ML Series - Wayanad House">
-<meta property="twitter:description" content="ML Series is an initiative by the Wayanad House">
+<meta property="twitter:description" content="Welcome to Wayanad House AI-ML Enthusiasts Interest Group">
 <meta property="twitter:image" content="https://wayanadiitm.github.io/ml/assets/images/favicon.png">
 <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png"/>
 <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
@@ -127,7 +127,8 @@ body {
           <div class="col-lg-12">
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="/ml">
-                <img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" height="50" width="50"/>
+                <!--<img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" height="50" width="50"/>-->
+                <img src="/assets/images/logo.png" height="50" width="50"/> <b>WHALE</b>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
