--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <meta charset="UTF-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>WHALE 🐋 Initiative</title>
-<meta name="title" content="WHALE 🐋 Initiative">
+<title>WHALE Initiative 🐋</title>
+<meta name="title" content="WHALE Initiative 🐋">
 <meta name="description" content="Welcome to Wayanad House AI-ML Enthusiasts Interest Group">
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://wayanadiitm.github.io/ml/">
-<meta property="og:title" content="ML Series - Wayanad House">
+<meta property="og:title" content="WHALE Initiative 🐋">
 <meta property="og:description" content="Welcome to Wayanad House AI-ML Enthusiasts Interest Group">
 <meta property="og:image" content="https://wayanadiitm.github.io/ml/assets/images/favicon.png">
 <meta property="twitter:card" content="summary_large_image">
@@ -128,7 +128,7 @@ body {
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="/ml">
                 <!--<img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" height="50" width="50"/>-->
-                <img src="/assets/images/logo.png" height="50" width="50"/> <b>WHALE</b>
+                <img src="/ml/assets/images/logo.png" height="110" width="251"/> <b>WHALE</b>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
