--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ body {
             <nav class="navbar navbar-expand-lg">
               <a class="navbar-brand" href="/ml">
                 <!--<img src="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" height="50" width="50"/>-->
-                <img src="/ml/assets/images/logo.png" height="110" width="251"/> <b>WHALE</b>
+                <img src="/ml/assets/images/logo.png" height="66" width="151"/> <b><font color="black">WHALE</font></b>
               </a>
               <button class="navbar-toggler">
                 <span class="toggler-icon"> </span>
