--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <meta property="twitter:url" content="https://wayanadiitm.github.io/ml/">
 <meta property="twitter:title" content="ML Series - Wayanad House">
 <meta property="twitter:description" content="Welcome to Wayanad House AI-ML Enthusiasts Interest Group">
-<meta property="twitter:image" content="https://wayanadiitm.github.io/ml/assets/images/favicon.png">
-<link rel="shortcut icon" href="assets/images/favicon.png" type="image/png"/>
+<meta property="twitter:image" content="https://cdn-icons-png.flaticon.com/128/10817/10817404.png">
+<link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/128/10817/10817404.png" type="image/png"/>
 <link rel="stylesheet" href="assets/css/bootstrap.min.css" />
 <link rel="stylesheet" href="assets/css/animate.css" />
 <link rel="stylesheet" href="assets/css/lineicons.css" />
@@ -167,14 +167,16 @@ body {
                         </a>
                       </li>
                       <li class="ud-submenu-item">
+                        <a href="/ml/events/workshop2023" class="ud-submenu-link">
+                          Workshops-2023
+                        </a>
+                      </li>
+                      <li class="ud-submenu-item">
                         <a href="/ml/events/pysprint" class="ud-submenu-link">
                           Pythonic Sprint
                         </a>
                       </li>
                     </ul>
-                  </li>
-                  <li class="nav-item">
-                    <a href="news/inviting-article-submissions">Article Showcase</a>
                   </li>
                 </ul>
               </div>
@@ -208,8 +210,8 @@ body {
                   </a>
                 </li>
                 <li>
-                  <a href="https://wayanadiitm.github.io/ml/news/inviting-article-submissions" rel="nofollow noopener" class="ud-main-btn ud-link-btn">
-                    Call for Blogs <i class="lni lni-arrow-right"></i>
+                  <a href="/ml/events/epochs" rel="nofollow noopener" class="ud-main-btn ud-link-btn">
+                    Article Contest <i class="lni lni-arrow-right"></i>
                   </a>
                 </li>
               </ul>
@@ -983,6 +985,38 @@ body {
               </div>
             </div>
 
+   <div class="col-xl-3 col-lg-3 col-sm-6">
+              <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
+                <div class="ud-team-image-wrapper">
+                  <div class="ud-team-image">
+                    <img src="assets/images/team/am.PNG" alt="team" />
+                  </div>
+  
+                  <img
+                    src="assets/images/team/dotted-shape.svg"
+                    alt="shape"
+                    class="shape shape-1"
+                  />
+                  <img
+                    src="assets/images/team/shape-2.svg"
+                    alt="shape"
+                    class="shape shape-2"
+                  />
+                </div>
+                <div class="ud-team-info">
+                  <h5>Anirban Mandal</h5>
+                  <h6>Interdisciplinary</h6>
+                </div>
+                <ul class="ud-team-socials">
+                  <li>
+                    <a href="" target="_blank">
+                      <i class="lni lni-linkedin"></i>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+
             <div class="col-xl-3 col-lg-3 col-sm-6">
               <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
                 <div class="ud-team-image-wrapper">
@@ -1003,37 +1037,6 @@ body {
                 </div>
                 <div class="ud-team-info">
                   <h5>Rohit Satheesh</h5>
-                  <h6></h6>
-                </div>
-                <ul class="ud-team-socials">
-                  <li>
-                    <a href="" target="_blank">
-                      <i class="lni lni-linkedin"></i>
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-<div class="col-xl-3 col-lg-3 col-sm-6">
-              <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
-                <div class="ud-team-image-wrapper">
-                  <div class="ud-team-image">
-                    <img src="/ml/events/logicloom1/assets/img/team/4.PNG" alt="team" />
-                  </div>
-  
-                  <img
-                    src="assets/images/team/dotted-shape.svg"
-                    alt="shape"
-                    class="shape shape-1"
-                  />
-                  <img
-                    src="assets/images/team/shape-2.svg"
-                    alt="shape"
-                    class="shape shape-2"
-                  />
-                </div>
-                <div class="ud-team-info">
-                  <h5>Deepak Pandey</h5>
                   <h6></h6>
                 </div>
                 <ul class="ud-team-socials">
@@ -1111,17 +1114,12 @@ body {
             <div class="col-xl-3 col-lg-4 col-md-6">
               <div class="ud-widget">
                 <span class="ud-footer-logo">
-                  ML Series, Wayanad House
+                  WHALE Initiative
                 </span>
                 <p class="ud-widget-desc">
                   ML made fun!
                 </p>
                 <ul class="ud-widget-socials">
-                  <li>
-                    <a href="https://wayanad.iitmbs.org" target="_blank">
-                      <i class="lni lni-google"></i>
-                    </a>
-                  </li>
                   <li>
                     <a href="https://www.instagram.com/wayanad_iitm/" target="_blank">
                       <i class="lni lni-instagram-filled"></i>
@@ -1187,7 +1185,7 @@ body {
           <div class="row">
             <div class="col-md-8">
               <ul class="ud-footer-bottom-left">
-                &copy; Wayanad House ML-Series Team
+                &copy; WHALE Team, All rights reserved
                 <!--<li>
                   <a href="javascript:void(0)"></a>
                 </li>-->
@@ -1277,6 +1275,7 @@ body {
 </script>
     <script>
   const phrases = [
+    "W̲ayanad H̲ouse A̲I-ML̲ E̲nthusiasts Interest Group",
     "Dive into the awesome ML Journey with the Wayanad initiative",
     "No more constrained to fests, the team is back with a broader aim",
     "Join us as we explore the world of Machine Learning 🚀",
