--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@ body {
               <div class="ud-single-team wow fadeInUp" data-wow-delay=".1s">
                 <div class="ud-team-image-wrapper">
                   <div class="ud-team-image">
-                    <img src="assets/images/team/am.PNG" alt="team" />
+                    <img src="assets/images/team/am2.jpg" alt="team" />
                   </div>
   
                   <img
@@ -1077,7 +1077,7 @@ body {
                   </div>
                   <div class="ud-info-meta">
                     <h5>Get in Touch</h5>
-                    <p>Wayanad House,<br>IITM BS Program</p>
+                    <p>https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe</p>
                   </div>
                 </div>
                 <div class="ud-single-info">
