--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@ body {
                   </div>
                   <div class="ud-info-meta">
                     <h5>Get in Touch</h5>
-                    <p>https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe</p>
+                    <p><a href="Join Discussion Group" target="_blank">https://chat.whatsapp.com/HGA056Buywy9R6QHOPGmwe</a></p>
                   </div>
                 </div>
                 <div class="ud-single-info">
