--- a/events/epochs/index.html
+++ b/events/epochs/index.html
@@ -223,7 +223,7 @@ section.contact .social-media a {
         <h1 class="display-2 fw-bold">Article Contest</h1>
         <p>We invite students to contribute articles in the <b>AI-ML and programming domains (including interdisciplinary topics such as AI in Physics, Robotics and more) for our annual newsletter</b>. We are looking for fresh insights, any findings, and thoughtful analyses that engage our community.
         </p>
-         <a href="#" target="_blank"><button class="btn btn-outline-dark btn-lg">Make Submission <i class="bi bi-rocket-takeoff-fill"></i></button></a>
+         <a href="https://epochs.netlify.app" target="_blank"><button class="btn btn-outline-dark btn-lg">Read Newsletter <i class="bi bi-rocket-takeoff-fill"></i></button></a>
         <br><br><div class="timer-container">
         <div id="countdown"><!--Submission closes in --><b><span id="timer">Loading...</span></b></div>
     </div>
