--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ body {
 <div id="myModal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <a href=""><img src="https://wayanadiitm.github.io/contribute/assets/teaser.png" style="max-width:100%;height:auto;" alt="announcement"/></a>
+        <a href="https://wayanadiitm.github.io/logicloom3/" target="_blank">The team hosted LogicLooM 3.0 successfully with the highest registration and retention rate!! Click here for the archives... <!--<img src="https://wayanadiitm.github.io/contribute/assets/teaser.png" style="max-width:100%;height:auto;" alt="announcement"/>--></a>
     </div>
 </div>
 
@@ -159,6 +159,11 @@ body {
                       <li class="ud-submenu-item">
                         <a href="/ml/events/logicloom2/" class="ud-submenu-link">
                           LogicLooM 2.0 (May - Jun 2024)
+                        </a>
+                      </li>
+                      <li class="ud-submenu-item">
+                        <a href="/logicloom3/" class="ud-submenu-link">
+                          LogicLooM 3.0 (JAN 2025)
                         </a>
                       </li>
                       <li class="ud-submenu-item">
