--- a/archives.html
+++ b/archives.html
@@ -103,6 +103,11 @@
                         </a>
                       </li>
                       <li class="ud-submenu-item">
+                        <a href="/logicloom3/" class="ud-submenu-link">
+                          LogicLooM 3.0 (JAN 2025)
+                        </a>
+                      </li>
+                      <li class="ud-submenu-item">
                         <a href="/ml/events/mlc/" class="ud-submenu-link">
                           ML Challenge 1.0, 2.0
                         </a>
@@ -152,6 +157,10 @@
             <div class="ud-about-content" style="max-width:100%;">
               <span class="tag"><i class="lni lni-tag"></i> Videos</span>
               <div class="video-grid">
+                <div class="video-item">
+                            <h3>LogicLooM 3.0 - Workshop on LLMs (Margazhi'25) by Mr. S Anand, CEO, Gramener</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/sK7R5y0uWXM?si=MOfU6u-6E4qxCqaN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+               </div>
                         <div class="video-item">
                             <h3>Launch of LogicLooM 2.0 (Paradox'24) by Dr. Jyothi, IIT-GN</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/qZNhso7FnX8?si=wWNGkFqGlOmNaHs1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
