Update and rename index.html to index_new.html

--- a/index_new.html
+++ b/index_new.html
@@ -112,9 +112,27 @@
             <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-4 gap-8">
                 <!-- Team member cards go here -->
                 <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
-                    <img src="assets/images/team/sd.PNG" alt="Somsubhra De" class="w-full h-48 object-cover">
+                    <img src="" alt="" class="w-full h-48 object-cover">
                     <div class="p-4">
                         <h3 class="text-xl font-semibold mb-2">Somsubhra De</h3>
+                        <p class="text-gray-600">Core</p>
+                    </div>
+                </div>
+                <!-- Add more team member cards as needed -->
+                 <!-- Team member cards go here -->
+                <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
+                    <img src="" alt="" class="w-full h-48 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-semibold mb-2">Advait Vats</h3>
+                        <p class="text-gray-600">Core</p>
+                    </div>
+                </div>
+                <!-- Add more team member cards as needed -->
+                 <!-- Team member cards go here -->
+                <div class="bg-gray-100 rounded-lg shadow-md overflow-hidden">
+                    <img src="" alt="" class="w-full h-48 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-semibold mb-2">Sayan Bhowmick</h3>
                         <p class="text-gray-600">Core</p>
                     </div>
                 </div>
