--- a/index_new.html
+++ b/index_new.html
@@ -446,7 +446,7 @@
         </div>
       </div>
     </div>
-
+</section>
 
     <section id="team" class="py-16">
   <div class="container mx-auto px-4">
